test/files/invalid/docstring_empty.fbs
//! Okay1
/// Bad1
//! Bad2
